--- a/templates/footer.html
+++ b/templates/footer.html
@@ -16,7 +16,7 @@
         <div class="col-md-3" id="admin-info">
           Admin info.
           <p><i class="fas fa-phone-square-alt"></i> +234-813-016-5966</p>
-          <p><i class="fas fa-envelope"></i> smartyleey@gmail.com</p>
+          <p><i class="fas fa-envelope"></i> info@myworldgist.com</p>
           <p><i class="fas fa-envelope"></i> myworldgist@gmail.com</p>
         </div>
 
@@ -38,7 +38,7 @@
 
         <div class="col-md-3 mt-5">
           <a href="{% url 'blog:policy' %}" class="text-light">
-            <h4>Privacy Policy</h4>
+            <p>Privacy Policy</p>
           </a>
         </div>
 
