--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -10,9 +10,10 @@
 
 </head>
 
-<body>
-    <nav class="my_navbar shadow-md" id="my-sticky">
-        <header class="my_navbar__header">
+<body  style="padding-top: 60px;">
+
+    <nav class="my_navbar shadow-md" id="my-fixed">
+        <header class="my_navbar__header bg-primary">
             <a href="/"><img src="{% static '/worldgist.png' %}" alt="Logo" class="navbar__logo" title="Home"></a>
 
             <!-- for wide screen size -->
