--- a/amazon_store/templates/amazon_store/amazonstore_list.html
+++ b/amazon_store/templates/amazon_store/amazonstore_list.html
@@ -36,6 +36,24 @@
         #smarty-no-underline:hover {
             text-decoration: none;
         }
+
+        input[type=search] {
+        width: 140px;
+        box-sizing: border-box;
+        border: 2px solid #ccc;
+        border-radius: 4px;
+        font-size: 16px;
+        background-color: white;
+        background-image: url('{% static "fav/search2.png" %}');
+        background-position: 12px 16px; 
+        background-repeat: no-repeat;
+        padding: 12px 20px 12px 40px;
+        -webkit-transition: width 0.4s ease-in-out;
+        transition: width 0.4s ease-in-out;
+        }
+        input[type=search]:focus{
+        width: 100%;
+        }
     </style>
 
 </head>
