--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
-{% block content %}
 
+{% block content %}
 <title>{% block title %} | Login {% endblock title %}</title>
 <div class="container mb-5">
   <div class="row">
@@ -13,8 +13,16 @@
           <input type="text" class="form-control" placeholder="Username:" name="username" maxlength="30" size="25"
             required />
         </div>
-        <div class="form-group">
+
+        <div class="input-group mb-3">
           <input type="password" class="form-control" placeholder="Password:" maxlength="12" name="password" required />
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <button type="button" class="badge" onclick="showPass()">
+                <i class="fas fa-eye-slash fa-sm"></i>
+              </button>
+            </div>
+          </div>
         </div>
         <button type="submit" class="btn btn-primary btn-sm">Login</button>
         <!-- Checkbox remember key -->
@@ -37,4 +45,14 @@
   </div>
 </div>
 
+<script>
+  var x = document.querySelector('input[type=password]')
+  var showPass = () =>{
+    if(x.type === 'password'){
+      x.type =  'text'
+    }else{
+      x.type =  'password'
+    }
+  }
+</script>
 {% endblock content %}
