--- a/templates/main/register.html
+++ b/templates/main/register.html
@@ -28,21 +28,37 @@
           <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Email@gmail.com"
             name="email" required />
         </div>
-        <div class="form-group">
-          <input type="password" class="form-control" placeholder="Password:" name="password" required />
-        </div>
-        <div class="form-group">
-          <input type="password" class="form-control" placeholder="Confirm Password:" name="confirm_password"
-            required />
 
-          <div>
-            <br />
-            <input type="checkbox" name="accept_policy" id="accept_policy">
-            <label for="accept_policy">By signing up, I agree to have read and accepted the
-              <a href="{% url 'blog:policy' %}">terms
-                of use, cookie and privacy policy</a> of <a href="/">myworldgist.com</a>
-            </label>
+        <div class="input-group mb-3">
+          <input type="password" name="password" class="form-control" id="show1" placeholder="Password:" required />
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <button type="button" class="badge" onclick="showPass()">
+                <i class="fas fa-eye-slash fa-sm"></i>
+              </button>
+            </div>
           </div>
+        </div>
+        
+        <div class="input-group">
+          <input type="password" name="confirm_password" class="form-control" id="show2" placeholder="Confirm Password:"
+            required />
+            <div class="input-group-append">
+              <div class="input-group-text">
+                <button type="button" class="badge" onclick="showPass2()">
+                  <i class="fas fa-eye-slash fa-sm"></i>
+                </button>
+              </div>
+            </div>
+        </div>
+
+        <div>
+          <br />
+          <input type="checkbox" name="accept_policy" id="accept_policy">
+          <label for="accept_policy">By signing up, I agree to have read and accepted the
+            <a href="{% url 'blog:policy' %}">terms
+              of use, cookie and privacy policy</a> of <a href="/">myworldgist.com</a>
+          </label>
         </div>
 
         <input type="submit" class="btn btn-warning btn-sm" id="submit" name="submit" value="Sign Up" disabled />
@@ -60,6 +76,7 @@
     </div>
   </div>
 </div>
+
 
 {% block extra_scripts %}
 <script type="text/javascript">
@@ -79,6 +96,23 @@
     })
   })
 
+  function showPass(){
+    let x = document.getElementById('show1')
+    if(x.type === 'password'){
+      x.type = 'text';
+    }else{
+      x.type = 'password'
+    }
+  }
+
+  function showPass2() {
+      let x2 = document.getElementById('show2')
+      if (x2.type === 'password') {
+        x2.type = 'text';
+      } else {
+        x2.type = 'password'
+      }
+    }
 </script>
 {% endblock extra_scripts %}
 
